packages/plugin-shiki/src/shiki.scss
/**
 * Custom shiki code block theme
 * reference: https://github.com/shikijs/shiki/blob/main/docs/themes.md
 * -------------------------------------------------------------------------- */

html:not(.rp-dark) {
  --shiki-foreground: #414141;
  --shiki-background: transparent;
  --shiki-token-constant: #1976d2;
  --shiki-token-string: #31a94d;
  --shiki-token-comment: rgb(182, 180, 180);
  --shiki-token-keyword: #cf2727;
  --shiki-token-parameter: #f59403;
  --shiki-token-function: #7041c8;
  --shiki-token-string-expression: #218438;
  --shiki-token-punctuation: #242323;
  --shiki-token-link: #22863a;

  // diff language
  --shiki-token-deleted: #d32828;
  --shiki-token-inserted: #22863a;
}

html.rp-dark {
  --shiki-foreground: #cac7c7;
  --shiki-token-constant: #6fb0fa;
  --shiki-token-string: #f9a86e;
  --shiki-token-comment: #6a727b;
  --shiki-token-keyword: #f47481;
  --shiki-token-parameter: #ff9800;
  --shiki-token-function: #ae8eeb;
  --shiki-token-string-expression: #4fb74d;
  --shiki-token-punctuation: #bbbbbb;
  --shiki-token-link: #f9a76d;

  // diff language
  --shiki-token-deleted: #ee6d7a;
  --shiki-token-inserted: #36c47f;
}

.rspress-doc span.line {
  padding: 0 1.25rem;
}

.diff,
.code-line-highlighted {
  transition: background-color 0.5s;
  padding: 0 20px;
  width: 100%;
  display: inline-block;
  position: relative;
}

.diff.add::after {
  content: '+';
  position: absolute;
  left: 10px;
  top: 0px;
  color: #4fb74d;
}

.diff.remove::after {
  content: '-';
  position: absolute;
  left: 10px;
  top: 0px;
  color: #f47481;
}

.has-diff [class*='language-'] .diff.add {
  background-color: rgba(16, 185, 129, 0.1);
  padding: 0 20px 0 19px;
}

[class*='language-'] code .diff.remove {
  background-color: rgba(244, 63, 94, 0.1);
  padding: 0 20px 0 19px;
}

.rspress-code-content {
  .has-highlighted [class*='language-'] {
    .line.highlighted {
      width: 100%;
      position: static;
      display: inline-block;
      background-color: rgba(0, 99, 199, 0.1);
    }
    .line.highlighted.error {
      background-color: rgba(244, 63, 94, 0.1);
    }
    .line.highlighted.warning {
      background-color: rgba(234, 179, 8, 0.1);
    }
  }
}

.has-focused [class*='language-'] {
  .line:not(.focused) {
    filter: blur(0.095rem);
    opacity: 0.4;
    transition:
      filter 0.35s,
      opacity 0.35s;
  }
  &:hover {
    .line:not(.focused) {
      filter: blur(0);
      opacity: 1;
    }
  }
}

.has-line-number code {
  counter-reset: step;
  counter-increment: step 0;
  & .line-number::before {
    content: counter(step);
    counter-increment: step;
    width: 15px;
    margin-right: 15px;
    display: inline-block;
    text-align: right;
    color: rgba(115, 138, 148, 0.4);
  }
}

.rp-force-wrap {
  code {
    white-space: pre-wrap !important;
  }
}

